--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,3 @@
-# This file lists all individuals having contributed content to the repository.
-# For how it is generated, see `hack/generate-authors.sh`.
+# These individuals contributed to the hbnb project in this repository 
 
-Lordwill1 <messagelordwill@gmail.com>
-Broline77 <brolineoronu3@gmail.com>
+Mostafa Ramadan <ma2963629@gmail.com>
